deploy/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: go-liga
  namespace: go-liga
spec:
  selector:
    app.kubernetes.io/name: go-liga
  ports:
    - name: http
      port: 80
      targetPort: http
